--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "cra-template": "1.1.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "tailwindcss": "^0.0.0-insiders.1d4c5c7"
   },
   "scripts": {
     "start": "react-scripts start",
