--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@mui/material": "^5.6.1",
+    "babel-runtime": "^6.26.0",
     "cra-template": "1.1.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.1",
     "react-scripts": "^5.0.0",
+    "react-typing-animation": "^1.6.2",
     "react-vertical-timeline-component": "^3.5.2"
   },
   "scripts": {
