--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^5.3.1",
+    "react-intersection-observer": "^9.4.1",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.0",
+    "react-type-animation": "^2.1.2",
     "react-typing-animation": "^1.6.2",
-    "react-vertical-timeline-component": "^3.5.2"
+    "react-vertical-timeline-component": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
