--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,11 +5,5 @@
   "display": "standalone",
   "theme_color": "#cdfdda",
   "background_color": "#cdfdda",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    }
-  ]
+  "icons": []
 }
